# bacnet-sim-gateway

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml
.github/workflows/: ci.yml
config/: simulator.yaml  simulator_1000.yaml  simulator_1000_multi.yaml  simulator_2000.yaml
docker/: Dockerfile  docker-compose.integration.yml  docker-compose.yml  mosquitto.conf
docs/: architecture-review.html  development-workflow.md  roadmap.md  security-notes.md  third-party-licenses.md  troubleshooting.md
docs/adr/: ADR-001-sbco-point-list-single-input.md  ADR-002-one-container-one-bbc.md  ADR-003-gateway-id-not-bbc-id.md  ADR-004-yaml-intermediate-model.md  ADR-005-northbound-bacnet-southbound-binding.md  ADR-006-semantic-tags-haystack.md  ADR-007-object-type-auto-inference.md  ADR-008-raspberry-pi-native-execution.md  ADR-009-bacpypes3-single-library.md  ADR-010-runtime-concurrency-single-loop-asyncio.md  ADR-011-device-mapping-modes.md  ADR-012-device-type-brick-class-tag-derivation.md  ADR-013-southbound-transport-abstraction.md  ADR-014-northbound-bows-connector.md  ADR-015-buildingos-bacnet-schema-mqtt-first.md  ADR-016-bows-amqp-and-downlink-control.md  ADR-017-bows-grpc-downlink-control.md
docs/backlog/: PRD-v1.3.md  PRD-v1.4.md  PRD-v1.5.md  PRD.md  README.md
docs/backlog/epic/: EP-001-simulator-core.md  EP-002-modes-southbound-binding.md  EP-003-simulation-fault-injection.md  EP-004-upper-integration.md  EP-005-semantic-tags.md  EP-006-standards-artifacts-sc.md  EP-007-gateway-admin-ui.md  EP-007-northbound-bows-connector.md  EP-008-northbound-bows-connector.md  EP-009-architecture-quality.md
docs/memory/: architecture.md  bacnet-domain.md  decisions.md  pitfalls.md
docs/specs/: README.md  bacnet-service-priority.md  communication-sequences.md  compose-integration-env.md  device-mapping.md  northbound-bows-buildingos.md  object-id-numbering.md  operating-modes.md  pics-bibbs.md  requirements-definition-v1.1.md  sbco-to-bacnet-mapping.md  southbound-binding.md
docs/vision/: vision.md
proto/: gateway_egress.proto  gateway_ingress.proto
scripts/: gen_proto.sh
src/bbc_sim/: __init__.py  cli.py  models.py
src/bbc_sim/bacnet_objects/: __init__.py  builder.py
src/bbc_sim/bows/: __init__.py  acquire.py  cli.py  encoder.py  models.py  point_registry.py  runner.py
src/bbc_sim/bows/downlink/: __init__.py  backoff.py  client.py  executor.py  gateway_egress_pb2.py  gateway_egress_pb2_grpc.py  models.py  pump.py
src/bbc_sim/bows/uplink/: __init__.py  client.py  encoder.py  gateway_ingress_pb2.py  gateway_ingress_pb2_grpc.py
src/bbc_sim/export/: __init__.py  artifacts.py  cli.py
src/bbc_sim/observability/: log_buffer.py
src/bbc_sim/rest/: __init__.py  api.py  reload.py  status.py
src/bbc_sim/semantic/: __init__.py  brick.py
src/bbc_sim/services/: __init__.py  cli.py  client.py
src/bbc_sim/simulation/: __init__.py  engine.py  fault.py  generators.py
src/bbc_sim/simulator_runtime/: __init__.py  app.py  cli.py  runtime.py
src/bbc_sim/southbound/: __init__.py  address.py  amqp.py  binding.py  factory.py  mapping.py  mqtt.py  transport.py  zeromq.py
src/bbc_sim/web/: router.py
src/bbc_sim/web/static/: app.css  app.js
src/bbc_sim/web/templates/: base.html  bindings.html  dashboard.html  devices.html  help.html  logs.html  object_detail.html  pointlist.html  status.html
src/bbc_sim/web/templates/partials/: _bindings_table.html  _counters.html  _empty_bindings.html  _empty_objects.html  _help_bindings.html  _help_dashboard.html  _help_devices.html  _help_logs.html  _help_pointlist.html  _help_status.html  _logtail.html  _objects_table.html  _reload_result.html  _tiles.html  _tour.html
src/bbc_sim/yaml_generator/: __init__.py  generator.py  mapping.py  pointlist.py  units.py  yaml_io.py
tests/: conftest.py  test_amqp_transport.py  test_bacnet_objects.py  test_bows_acquire.py  test_bows_encoder.py  test_bows_integration.py  test_bows_point_registry.py  test_bows_runner.py  test_bows_schema.py  test_bows_uplink_client.py  test_bows_uplink_encoder.py  test_cli_generate.py  test_cli_runtime.py  test_cov_expired_subscription.py  test_cov_wpm.py  test_downlink_backoff.py  test_downlink_client.py  test_downlink_executor.py  test_downlink_grpc_loopback.py  test_downlink_imports.py  test_downlink_pump.py  test_engine_rest.py  test_export.py  test_fault.py  test_generator.py  test_log_buffer.py  test_loopback.py  test_mapping.py  test_mode_switch.py  test_mqtt_transport.py  test_multi_device_generator.py  test_pointlist.py  test_rest_api_write.py  test_rest_bindings.py  test_rest_counters.py  test_rest_reload.py  test_rest_status.py  test_semantic_tags.py  test_simulation.py  test_southbound.py  (+5 more)
tests/fixtures/: README.md  buildingos-bacnet-device-message.schema.json  sample_pointlist.csv
