[project]
name = "bbc-sim"
version = "0.1.0"
description = "SBCO BACnet B-BC Simulator / Gateway"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "bacpypes3>=0.0.98",
    "pyyaml>=6.0",
    "typer>=0.12",
    "paho-mqtt>=2.0",
    "pyzmq>=26.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "jinja2>=3.1",  # admin UI server-rendering (EP-007, AGENTS.md §5: single new dep)
]

[project.scripts]
bbc-sim = "bbc_sim.cli:app"

# Single source of truth for dev tooling (PEP 735). Installed by `uv sync`
# because `dev` is listed in [tool.uv].default-groups below (EP-009.1).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "httpx>=0.27",
]

# Make `uv sync` (no flags) install the dev group explicitly, so lint/type/test
# tooling is present locally and in CI regardless of uv's default behavior.
[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bbc_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (real broker/Hono/Ditto); skipped by default",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer.Option/Argument in defaults is the intended Typer idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["bbc_sim"]
mypy_path = "src"
ignore_missing_imports = true
