[project]
name = "bbc-sim"
version = "0.1.0"
description = "SBCO BACnet B-BC Simulator / Gateway"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "bacpypes3>=0.0.98",
    "pyyaml>=6.0",
    "typer>=0.12",
    "paho-mqtt>=2.0",
    "pyzmq>=26.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "jinja2>=3.1",  # admin UI server-rendering (EP-007, AGENTS.md §5: single new dep)
]

[project.scripts]
bbc-sim = "bbc_sim.cli:app"

# Optional transports, kept out of the base install so CI / ARM stay minimal
# (AGENTS.md §5); imported lazily so the base modules import without them. gRPC
# (Building OS GatewayEgress down-link, ADR-017) pulls in grpcio/protobuf.
#   uv sync --extra grpc   # down-link control (bbc-sim bows egress)
# Floors match the committed stubs' import-time runtime checks: gateway_egress_pb2_grpc.py
# requires grpcio>=1.81.0 and gateway_egress_pb2.py validates protobuf>=6.33.5. Lower
# floors would let `--extra grpc` resolve a runtime that crashes on import.
[project.optional-dependencies]
grpc = ["grpcio>=1.81.0", "protobuf>=6.33.5"]

# Single source of truth for dev tooling (PEP 735). Installed by `uv sync`
# because `dev` is listed in [tool.uv].default-groups below (EP-009.1).
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
    "httpx>=0.27",
    "jsonschema>=4.0",
    "grpcio>=1.81.0",  # down-link integration tests; matches committed stubs (>=1.81.0)
    "grpcio-tools>=1.81.0",  # regenerate proto stubs (scripts/gen_proto.sh)
]

# Make `uv sync` (no flags) install the dev group explicitly, so lint/type/test
# tooling is present locally and in CI regardless of uv's default behavior.
[tool.uv]
default-groups = ["dev"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bbc_sim"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires external services (real broker/Hono/Ditto); skipped by default",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
# Generated gRPC stubs (scripts/gen_proto.sh) — not hand-maintained, don't lint/format.
extend-exclude = [
    "src/bbc_sim/bows/downlink/gateway_egress_pb2.py",
    "src/bbc_sim/bows/downlink/gateway_egress_pb2_grpc.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: typer.Option/Argument in defaults is the intended Typer idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["bbc_sim"]
mypy_path = "src"
ignore_missing_imports = true

# Generated gRPC stubs are not type-clean and not hand-maintained (scripts/gen_proto.sh).
[[tool.mypy.overrides]]
module = [
    "bbc_sim.bows.downlink.gateway_egress_pb2",
    "bbc_sim.bows.downlink.gateway_egress_pb2_grpc",
]
ignore_errors = true
